[package]
name = "rocket-diesel"
version = "0.1.0"
authors = ["Charles Hodge <46727996+chasahodge@users.noreply.github.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.5", features = ["postgres", "numeric"] }
dotenv = "0.15.0"
rocket = "0.4.6"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
chrono = "0.4.19"
bigdecimal = "0.2.0"
